funzionalità: correzione errori vari

--- a/funzionalita.html
+++ b/funzionalita.html
@@ -239,7 +239,33 @@
                         <td> In questa area, i genitori potranno entrare in contatto con i genitori dei bambini delle altri classi <br> della scuola </td>
                         <td> NO </td>
                     </tr>
+                    <tr>
+                        <td> <b>Profilo Personale </b> </td>
+                        <td> Visualizzazione informazioni personali (*) </td>
+                        <td> Verranno visualizzate alcune delle informazioni che il genitore ha inserito nella fase di registrazione. (Il profilo di ciascun utente tipo genitore è privato, per cui visibile solo al proprietario del profilo) </td>
+                        <td> SI </td>
+                    </tr>
+                    <tr>
+                        <td> </td>
+                        <td> Caricamento immagine profilo (*) </td>
+                        <td> Il genitore avrà la possibilità di modificare l'avatar assegnatogli di default con un'altra immagine  </td>
+                        <td> NO </td>
+                    </tr>
 
+                    <tr>
+                        <td> </td>
+                        <td> Notifiche Eventi (*) </td>
+                        <td> Il genitore visualizza sia gli eventi a cui è stato invitato (sezione "eventi a cui sono stato<br>
+                            invitato"), sia gli eventi a cui ha deciso di partecipare (sezione "eventi a cui parteciperò") </td>
+                        <td> NO </td>
+                    </tr>
+                    <tr>
+                        <td> </td>
+                        <td> Chiedi aiuto ad un esperto </td>
+                        <td> Il genitore potrà chiedere l'aiuto di un esperto (psicologo, sessuologo ecc.) qualora lo<br>
+                            ritenesse necessario per il proprio figlio </td>
+                        <td> NO </td>
+                    </tr>
 
                     <tr>
                         <td> <b> Eventi</b> </td>
@@ -294,33 +320,7 @@
                             al relativo tipo di utente (nella sezione news eventi della pagina personale) </td>
                         <td> NO </td>
                     </tr>
-                    <tr>
-                        <td> <b>Profilo Personale </b> </td>
-                        <td> Visualizzazione informazioni personali (*) </td>
-                        <td> Verranno visualizzate alcune delle informazioni che il genitore ha inserito nella fase di registrazione. (Il profilo di ciascun utente tipo genitore è privato, per cui visibile solo al proprietario del profilo) </td>
-                        <td> SI </td>
-                    </tr>
-                    <tr>
-                        <td> </td>
-                        <td> Caricamento immagine profilo (*) </td>
-                        <td> Il genitore avrà la possibilità di modificare l'avatar assegnatogli di default con un'altra immagine  </td>
-                        <td> NO </td>
-                    </tr>
 
-                    <tr>
-                        <td> </td>
-                        <td> Notifiche Eventi (*) </td>
-                        <td> Il genitore visualizza sia gli eventi a cui è stato invitato (sezione "eventi a cui sono stato<br>
-                            invitato"), sia gli eventi a cui ha deciso di partecipare (sezione "eventi a cui parteciperò") </td>
-                        <td> NO </td>
-                    </tr>
-                    <tr>
-                        <td> </td>
-                        <td> Chiedi aiuto ad un esperto </td>
-                        <td> Il genitore potrà chiedere l'aiuto di un esperto (psicologo, sessuologo ecc.) qualora lo<br>
-                            ritenesse necessario per il proprio figlio </td>
-                        <td> NO </td>
-                    </tr>
                     </tbody>
                 </table>
 
@@ -400,6 +400,56 @@
                             tramite chat "asincrona"  </td>
                         <td> SI lista, <br>NO contatta </td>
                     </tr>
+                    <tr>
+                        <td> <b>Profilo Personale </b> </td>
+                        <td> Visualizzazione informazioni personali (*) </td>
+                        <td> Gli insegnanti e i genitori potranno visualizzare alcune delle informazioni che l'insegnante ha inserito nella fase di registrazione </td>
+                        <td> SI </td>
+                    </tr>
+                    <tr>
+                        <td> </td>
+                        <td> Caricamento immagine profilo (*) </td>
+                        <td> L'insegnante avrà la possibilità di modificare l'avatar assegnatogli di default con un'altra immagine  </td>
+                        <td> NO </td>
+                    </tr>
+                    <tr>
+                        <td> </td>
+                        <td> Notifiche Eventi (*) </td>
+                        <td> L'insegnante visualizza gli eventi sia a cui è stato invitato (sezione "eventi a cui sono stato invitato"), sia gli
+                            eventi a cui ha deciso di partecipare (sezione "eventi a cui parteciperò") </td>
+                        <td> NO </td>
+                    </tr>
+                    <tr>
+                        <td> </td>
+                        <td> Materiale didattico - visualizza e scarica (*) </td>
+                        <td> Gli insegnanti e i genitori potranno visualizzare e/o scaricare il materiale didattico caricato dal docente </td>
+                        <td> SI </td>
+                    </tr>
+                    <tr>
+                        <td> </td>
+                        <td> Materiale didattico - carica materiale </td>
+                        <td> L'insegnante avrà la possibilità di caricare del materiale didattico extra nella sezione "materiale didattico" </td>
+                        <td> SI </td>
+                    </tr>
+                    <tr>
+                        <td> </td>
+                        <td> Materiale didattico - carica immagine </td>
+                        <td> L'insegnante potrà condividere immagini o foto </td>
+                        <td> SI </td>
+                    </tr>
+                    <tr>
+                        <td> </td>
+                        <td> Materiale didattico - carica documento </td>
+                        <td> L'insegnante potrà condividere documenti utili ai fini didattici (svolgimento di determinati esercizi ecc.) </td>
+                        <td> SI </td>
+                    </tr>
+                    <tr>
+                        <td>  </td>
+                        <td> Materiale didattico - carica video </td>
+                        <td> L'insegnante potrà condividere video (per far capire il metodo di spiegazione utilizzato in aula, per
+                            approfondire determinati argomenti trattati a lezione ecc.) </td>
+                        <td> SI </td>
+                    </tr>
 
                     <tr>
                         <td>  </td>
@@ -454,56 +504,7 @@
                         <td> NO </td>
                     </tr>
 
-                    <tr>
-                        <td> <b>Profilo Personale </b> </td>
-                        <td> Visualizzazione informazioni personali (*) </td>
-                        <td> Verranno visualizzate alcune delle informazioni che l'insegnante ha inserito nella fase di registrazione </td>
-                        <td> SI </td>
-                    </tr>
-                    <tr>
-                        <td> </td>
-                        <td> Caricamento immagine profilo (*) </td>
-                        <td> L'insegnante avrà la possibilità di modificare l'avatar assegnatogli di default con un'altra immagine  </td>
-                        <td> NO </td>
-                    </tr>
-                    <tr>
-                        <td> </td>
-                        <td> Notifiche Eventi (*) </td>
-                        <td> L'insegnante visualizza gli eventi sia a cui è stato invitato (sezione "eventi a cui sono stato invitato"), sia gli
-                            eventi a cui ha deciso di partecipare (sezione "eventi a cui parteciperò") </td>
-                        <td> NO </td>
-                    </tr>
-                    <tr>
-                        <td> </td>
-                        <td> Materiale didattico - visualizza </td>
-                        <td> Gli insegnanti e i genitori potranno visualizzare il materiale didattico caricato dal docente </td>
-                        <td> SI </td>
-                    </tr>
-                    <tr>
-                        <td> </td>
-                        <td> Materiale didattico - carica materiale </td>
-                        <td> L'insegnante avrà la possibilità di caricare del materiale didattico extra nella sezione "materiale didattico" </td>
-                        <td> SI </td>
-                    </tr>
-                    <tr>
-                        <td> </td>
-                        <td> Materiale didattico - carica immagine </td>
-                        <td> L'insegnante potrà condividere immagini o foto </td>
-                        <td> SI </td>
-                    </tr>
-                    <tr>
-                        <td> </td>
-                        <td> Materiale didattico - carica documento </td>
-                        <td> L'insegnante potrà condividere documenti utili ai fini didattici (svolgimento di determinati esercizi ecc.) </td>
-                        <td> SI </td>
-                    </tr>
-                    <tr>
-                        <td>  </td>
-                        <td> Materiale didattico - carica video </td>
-                        <td> L'insegnante potrà condividere video (per far capire il metodo di spiegazione utilizzato in aula, per
-                            approfondire determinati argomenti trattati a lezione ecc.) </td>
-                        <td> SI </td>
-                    </tr>
+
                 </table>
             </div>
 
