--- a/funzionalita.html
+++ b/funzionalita.html
@@ -320,6 +320,25 @@
                             al relativo tipo di utente (nella sezione news eventi della pagina personale) </td>
                         <td> NO </td>
                     </tr>
+                    <tr>
+                        <td> <b> Area comune genitori </b> </td>
+                        <td> Visualizza materiale  </td>
+                        <td> Il genitore ha la possibilità di visualizzare i file (immagini, video, pdf ecc.) caricati dagli altri genitori</td>
+                        <td> SI </td>
+                    </tr>
+                    <tr>
+                        <td>  </td>
+                        <td> Scarica materiale  </td>
+                        <td> Il genitore ha la possibilità di scaricare i file (immagini, video, pdf ecc.) caricati dagli altri genitori</td>
+                        <td> SI </td>
+                    </tr>
+                    <tr>
+                        <td>  </td>
+                        <td> Carica materiale   </td>
+                        <td> Il genitore ha la possibilità di caricare file (immagini, video, pdf ecc.) </td>
+                        <td> SI </td>
+                    </tr>
+
 
                     </tbody>
                 </table>
