--- a/index.html
+++ b/index.html
@@ -66,13 +66,12 @@
       <div class="cl-md-6"  align="center">
 
         <div id="videoIntro" class="embed-responsive-item">
-
-
           <iframe class="img-rounded" width="560" height="315" src="https://www.youtube.com/embed/00ysXqHFKQo" frameborder="0" allowfullscreen></iframe>
-          <!--<iframe class="img-rounded" width="560" height="315" src="https://www.youtube.com/embed/NyCst7We6Uw" frameborder="0" allowfullscreen></iframe>
+        <!--
+          <iframe class="img-rounded" width="560" height="315" src="https://www.youtube.com/embed/NyCst7We6Uw" frameborder="0" allowfullscreen></iframe>
 
 
-          <!--<img class="img-rounded" src="images/logo/spot2.jpg" class="img-responsive" width="560" height="315">-->
+          <img class="img-rounded" src="images/logo/spot2.jpg" class="img-responsive" width="560" height="315"> -->
 
         </div>
 
